--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "mongodb": "^4.7.0",
     "mongoose": "^4.8.4",
     "morgan": "^1.8.1"
   },
